<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/book"
            android:contentDescription="@string/thumbnail_description"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_addImage"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add_image" />

        <EditText
            android:id="@+id/et_addBook_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLength="50" />

        <EditText
            android:id="@+id/et_addBook_author"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/author"
            android:inputType="text"
            android:maxLength="50" />

        <EditText
            android:id="@+id/et_addBook_isbn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/isbn"
            android:inputType="number"
            android:maxLength="20" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit" />

    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>